--- a/design2/student1.html
+++ b/design2/student1.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Emphasize an Education Category Bootstrap Responsive Web Template | Gallery :: w3layouts</title>
+<title>Dragonfly | Passion Inspired</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -56,7 +56,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html" >Home</a></li>
-							<li><a href="teacher.html">Teacher</a></li>
+							<li><a href="teacher.html">Teacher Joy</a></li>
+							<li><a href="learning.html">Learning</a></li>
 							<li><a href="achievement.html">Achievement</a></li>
 							<li class="dropdown">
 								<a href="#" class="active" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Student Achievement<span class="caret"></span></a>
@@ -216,6 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="banner-menu-w3layouts">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="teacher.html">Teacher Joy</a></li>
+					<li><a href="learning.html">Learning</a></li>
 					<li><a href="achievement.html">Achievment</a></li>
 					<li><a href="student1.html">Testimonial</a></li>
 					<li><a href="student2.html">IGCSE Art & Desing</a></li>
