--- a/design2/teacher.html
+++ b/design2/teacher.html
@@ -55,7 +55,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html" >Home</a></li>
-							<li><a href="teacher.html" class="active">Teacher</a></li>
+							<li><a href="teacher.html" class="active">Teacher Joy</a></li>
+							<li><a href="learning.html">Learning</a></li>
 							<li><a href="achievement.html">Achievement</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Student Achievement<span class="caret"></span></a>
@@ -218,6 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="banner-menu-w3layouts">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="teacher.html">Teacher Joy</a></li>
+					<li><a href="learning.html">Learning</a></li>
 					<li><a href="achievement.html">Achievment</a></li>
 					<li><a href="student1.html">Testimonial</a></li>
 					<li><a href="student2.html">IGCSE Art & Desing</a></li>
