--- a/design2/index.html
+++ b/design2/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-<title>Dragonfly | Passion Inspired</title>
+<title>Dragonfly Art Cottage</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -19,6 +19,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--css links-->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /><!--bootstrap-->
 <link href="css/font-awesome.css" rel="stylesheet"><!--font-awesome-->
+<link href="css/lightcase.css" rel="stylesheet" type="text/css" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" /><!--stylesheet-->
 <!--//css links-->
 <!--fonts-->
@@ -308,7 +309,163 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 <!-- //Events --> 
 <!--testimonials-->
+<!-- <div id="testimonials" class="testimonials">
+	<div class="container">
+		<h3 class="heading-agileinfo">Gallery<span>Student Gallery</span></h3>
+		<div class="flex-slider">
+			<ul id="flexiselDemo1">			
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld1.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld2.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld3.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld4.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld5.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld6.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+				<li>
+					<div class="laptop">
+						<div class="col-md-12 team-left">
+							<img class="img-responsive" src="images/sld7.jpg" alt=" " />
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</li>
+			</ul>
+			
+		</div>
+
+	</div>
+</div> -->
 <!--//testimonials-->
+
+<!-- gallery inner -->
+<div class="inner-padding">
+	<div class="container">
+	<h3 class="heading-agileinfo">Gallery<span>Student Gallery</span></h3>
+		<div class="w3ls_portfolio_grids">
+				<div class="col-md-4 agileinfo_portfolio_grid">
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld1.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Khai Xin - Sweerland">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Khai Xin - Sweerland</h3>
+								</div>
+								<img src="images/sld1.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld2.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Hayden Li - Rainforest">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Hayden Li - Rainforest</h3>
+								</div>
+								<img src="images/sld2.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					
+				</div>
+				<div class="col-md-4 agileinfo_portfolio_grid">
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld3.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Aisha Khan - Unicorn">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Aisha Khan - Unicorn</h3>
+								</div>
+								<img src="images/sld3.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld4.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Emily - Wau">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Emily - Wau</h3>
+								</div>
+								<img src="images/sld4.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld5.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Feng Yen - London Bridge">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Feng Yen - London Bridge</h3>
+								</div>
+								<img src="images/sld5.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 agileinfo_portfolio_grid">
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld6.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Alyanna - Big Ban">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Alyanna - Big Ban</h3>
+								</div>
+								<img src="images/sld6.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					<div class="w3_agile_portfolio_grid1">
+						<a href="images/sld7.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Tara - Swans">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+								<div class="w3layouts_port_head">
+									<h3>Tara - Swans</h3>
+								</div>
+								<img src="images/sld7.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+		</div>
+	</div>
+</div>
+	<!-- //gallery inner -->
+
 <!-- footer -->
 
 <div class="contact-w3ls ">
@@ -348,6 +505,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 <!--//js -->
 <script src="js/SmoothScroll.min.js"></script>
+<script src="js/lightcase.js"></script>
+	<script src="js/jquery.events.touch.js"></script>
+	<script>
+		$('.showcase').lightcase();
+	</script>
 <!-- responsiveslides -->
 <script src="js/responsiveslides.min.js"></script>
 			<script>
