--- a/design2/student1.html
+++ b/design2/student1.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dragonfly | Passion Inspired</title>
+<title>Dragonfly Art Cottage</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -199,6 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </div>
 	<!-- //gallery inner -->
+
 <!-- footer -->
 
 <div class="contact-w3ls ">
