--- a/design2/achievement.html
+++ b/design2/achievement.html
@@ -164,12 +164,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><i aria-hidden="true"></i>Nurullakmal Bt Ab Rahman</li>
 									<li><i aria-hidden="true"></i>18 Years Old</li>
 								</ul>
-								<p>Grand Award Winner (Category For People With Disabilities-Mentally Challenged)</p>
+								<p>Grand Award Winner <br> (Category For People With Disabilities-Mentally Challenged)</p>
 								<ul>
 									<li><i aria-hidden="true"></i>Nur Shazana Bt Nor Azian</li>
 									<li><i aria-hidden="true"></i>13 Years Old</li>
 								</ul>
-								<p>Honorable (Lower Secondary School Category)</p>
+								<p>Honorable <br> (Lower Secondary School Category)</p>
 							</div>
 							</div>
 									</div>
@@ -203,7 +203,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 popular-grid declarewd std">
+					<div class="col-md-3 popular-grid declarewd std bothstd">
 						<img src="images/bothstd.jpg" class="img-responsive" alt=""/>
 						<div class="popular-text">
 							<h5><a href="#" data-toggle="modal" data-target="#myModal2"><span class="numberincomp">MCRB </span>Art Awards<div class="award">Grand Award Winner | Honorable</div></a></h5>
@@ -212,12 +212,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><i aria-hidden="true"></i>Nurullakmal Bt Ab Rahman</li>
 									<li><i aria-hidden="true"></i>18 Years Old</li>
 								</ul>
-								<p>Grand Award Winner (Category For People With Disabilities-Mentally Challenged)</p>
+								<p>Grand Award Winner <br> (Category For People With Disabilities-Mentally Challenged)</p>
 								<ul>
 									<li><i aria-hidden="true"></i>Nur Shazana Bt Nor Azian</li>
 									<li><i aria-hidden="true"></i>13 Years Old</li>
 								</ul>
-								<p>Honorable (Lower Secondary School Category)</p>
+								<p>Honorable <br> (Lower Secondary School Category)</p>
 							</div>
 						</div>
 					</div>
