--- a/design2/index.html
+++ b/design2/index.html
@@ -384,78 +384,78 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<h3 class="heading-agileinfo">Gallery<span>Student Gallery</span></h3>
 		<div class="w3ls_portfolio_grids">
 				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld1.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Khai Xin - Sweerland">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Khai Xin - Sweerland</h3>
 								</div>
-								<img src="images/sld1.jpg" alt=" " class="img-responsive">
+								<img src="images/sld1.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld2.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Hayden Li - Rainforest">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Hayden Li - Rainforest</h3>
 								</div>
-								<img src="images/sld2.jpg" alt=" " class="img-responsive">
+								<img src="images/sld2.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld3.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Aisha Khan - Unicorn">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Aisha Khan - Unicorn</h3>
 								</div>
-								<img src="images/sld3.jpg" alt=" " class="img-responsive">
+								<img src="images/sld3.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld4.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Emily - Wau">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Emily - Wau</h3>
 								</div>
-								<img src="images/sld4.jpg" alt=" " class="img-responsive">
+								<img src="images/sld4.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld5.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Feng Yen - London Bridge">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Feng Yen - London Bridge</h3>
 								</div>
-								<img src="images/sld5.jpg" alt=" " class="img-responsive">
+								<img src="images/sld5.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld6.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Alyanna - Big Ban">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Alyanna - Big Ban</h3>
 								</div>
-								<img src="images/sld6.jpg" alt=" " class="img-responsive">
+								<img src="images/sld6.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size">
 						<a href="images/sld7.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Tara - Swans">
 							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
 								<div class="w3layouts_port_head">
 									<h3>Tara - Swans</h3>
 								</div>
-								<img src="images/sld7.jpg" alt=" " class="img-responsive">
+								<img src="images/sld7.jpg" alt=" " class="img-responsive fixed-size">
 							</div>
 						</a>
 					</div>
