--- a/design2/student2.html
+++ b/design2/student2.html
@@ -117,9 +117,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<h3 class="heading-agileinfo">Isabelle Lacheta<span>Then & Now</span></h3>
 		<div class="w3ls_portfolio_grids">
 				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_14.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -127,9 +127,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_16.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -137,9 +137,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</a>
 					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_06.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -149,9 +149,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_07.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -160,9 +160,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_09.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -170,31 +170,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</a>
 					</div>
-				</div>
-				<div class="col-md-4 agileinfo_portfolio_grid">
-					<div class="w3_agile_portfolio_grid1">
-						<a href="images/student1_10.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
-								<div class="w3layouts_port_head">
-									<h3>Isabelle Lacheta</h3>
-								</div>
-								<img src="images/student1_10.jpg" alt=" " class="img-responsive">
-							</div>
-						</a>
-					</div>
-					<div class="w3_agile_portfolio_grid1">
-						<a href="images/student1_12.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
-								<div class="w3layouts_port_head">
-									<h3>Isabelle Lacheta</h3>
-								</div>
-								<img src="images/student1_12.jpg" alt=" " class="img-responsive">
-							</div>
-						</a>
-					</div>
-					<div class="w3_agile_portfolio_grid1">
+					<div class="w3_agile_portfolio_grid1 size3">
 						<a href="images/student1_08.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
-							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid">	
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
 								<div class="w3layouts_port_head">
 									<h3>Isabelle Lacheta</h3>
 								</div>
@@ -202,6 +180,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</a>
 					</div>
+				</div>
+				<div class="col-md-4 agileinfo_portfolio_grid">
+					<div class="w3_agile_portfolio_grid1 size3">
+						<a href="images/student1_10.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
+								<div class="w3layouts_port_head">
+									<h3>Isabelle Lacheta</h3>
+								</div>
+								<img src="images/student1_10.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					<div class="w3_agile_portfolio_grid1 size3">
+						<a href="images/student1_12.jpg" class="showcase" data-rel="lightcase:myCollection:slideshow" title="Isabelle Lacheta">
+							<div class="agileits_portfolio_sub_grid agileits_w3layouts_team_grid newcolor">	
+								<div class="w3layouts_port_head">
+									<h3>Isabelle Lacheta</h3>
+								</div>
+								<img src="images/student1_12.jpg" alt=" " class="img-responsive">
+							</div>
+						</a>
+					</div>
+					
 				</div>
 				<div class="clearfix"> </div>
 		</div>
